# open-gl-tutorial

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Mesh.h  README.md  Shader.cpp  Shader.h  cmake_install.cmake  main.cpp  open_gl_tutorial  open_gl_tutorial.cbp
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
